--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs": "^2.7.0",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
